update jdk 11 in dockerfile and remove unused java_opts. (#7441)
* update jdk 11 and remove unused java_opts.